# workplace-safety-analysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
dags/: ehss_pipeline_dag.py
dbt/ehss/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/ehss/macros/: generate_schema_name.sql  mappings.sql
dbt/ehss/models/marts/: _marts__models.yml  dim_date.sql  dim_establishment.sql  dim_geography.sql  dim_industry.sql  dim_injury_type.sql  fct_incidents.sql  mart_llm_eval.sql
dbt/ehss/models/staging/: _staging__models.yml  _staging__sources.yml  stg_llm__enrichment.sql  stg_osha__case_detail.sql  stg_osha__establishments.sql
dbt/ehss/tests/: assert_enrichment_coverage.sql
docs/diagrams/: architecture.excalidraw
enrichment/: __init__.py  cache.py  client.py  enrich.py  prompt.py  schemas.py
ingestion/: __init__.py  download.py  load_raw.py  sample.py
tests/: __init__.py  test_download.py  test_enrich.py  test_load_raw.py  test_prompt.py  test_sample.py  test_schemas.py
tests/fixtures/: sample_raw.sql
